--- a/main.html
+++ b/main.html
@@ -5,32 +5,7 @@
 
 <body>
 
-<!--<div id="content">
-    <div style="height:1500px;">
-        <iframe id="imagemonkey" src="https://imagemonkey.io/verify" scrolling="no"
-            frameborder="0" height="100%" width="100%" style="position:absolute; clip:rect(250px,1100px,1200px,250px);
-            top:-300px; bottom: -300px; "></iframe>
-    </div>
-</div>-->
-
-<style>
-#outerdiv {
-width: 400px; position: relative;
-}
-#innerdiv {
-position: absolute; 
-margin: auto;
-    top: 50%;
-    left: 50%;
-clip:rect(250px,1100px,1200px,250px); top: -200px;
-}
-</style>
-
-<div id="outerdiv">
-<div id="innerdiv">      
-<iframe width="1280" height="1024" src="https://imagemonkey.io/verify" scrolling="no" frameborder="0"></iframe>
-</div>
-</div>
+<p align="center"><iframe id="container" src="http://127.0.0.1:8080/verify?show_header=false&show_footer=false" width="800" height="1000" scrolling="no" frameborder="0"></iframe></p>
 
 
 </body>
