[0.1] imagemonkey-chrome-extension: a few minor changes
* made iframe fullscreen
* added "only_once" to imagemonkey URL
* removed dead code from manifest

--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
 	</button>
 
 	<div class="datacontainer">
-		<p align="center"><iframe id="container" src="" width="600" height="1300" scrolling="no" frameborder="0"></iframe></p>
+		<p align="center"><iframe id="container" src="" width="100%" height="100%" scrolling="no" frameborder="0"></iframe></p>
 
 
 		<div class="ui longer modal" id="settingsDlg">
